# libmyemail

./: .editorconfig  .gitignore  LICENSE.md  README.md  libmyemail.cc  makefile
source/: CMakeLists.txt  myemail.cc
